--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.22.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cron-job-manager": "^2.1.2",
